--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "input forms",
   "main": "index.js",
   "dependencies": {
+    "bind": "^0.1.7",
     "body-parser": "^1.15.2"
   },
   "devDependencies": {},
