--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "./node_modules/bin/jasmine.js",
+   // "test": "./node_modules/bin/jasmine.js",
     "start": "node index.js"
   },
   "repository": {
