--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "bind": "^0.1.7",
     "body-parser": "^1.15.2",
     "jasmine": "^2.5.2",
-    "request-json": "^0.6.1"
+    "request-json": "^0.6.1",
+    "express": "^4.14.0",
+    "util": "^0.10.3"
   },
   "devDependencies": {},
   "scripts": {
+    "test": "./node_modules/bin/jasmine.js",
     "start": "node index.js"
   },
   "repository": {
